01_vpc.tf
resource "aws_vpc" "ssuojae_vpc" {
  cidr_block       = "10.0.0.0/16"
  instance_tenancy = "default"

  tags = {
    Name = "ssuojae-vpc"
  }
}
